[package]
name = "convext"
version = "0.1.0"
authors = ["Mark Wainwright <wainwrightml@gmail.com>"]
license = "MIT"
keywords = ["art", "language"]
edition= "2021"

[dependencies]
itertools = "0.10.3"
num = "0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
pest = "2.0"
pest_derive = "2.0"
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr",] }
yewdux = { git = "https://github.com/intendednull/yewdux.git" }

wasm-logger = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen= { version = "0.2", features = ["serde"] }
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlInputElement",
]



[profile.release]
panic = 'abort'
codegen-units = 1
lto = true
opt-level = 3


[dev-dependencies]
bencher= "0.1"
ntest = "0.8"

